@@ -8,8 +8,10 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2016-06-12 bart39
+	Fix: category_id not changed to categories_id for category regexes. Fixes issue #2171.
 2016-06-10 ruhllatio
-	Mrg:  Dev fixrelsinglerun #2169 (Note: Restart Tmux)
+	Mrg: Dev fixrelsinglerun #2169 (Note: Restart Tmux)
 2016-06-09 ruhllatio
 	Fix: AniDB client not respecting update times
 2016-06-08 ruhllatio
